// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENTS/FormRow Default smoke-test 1`] = `
<div style="max-width: 1100px;">
  <div class="form-row">
    <div style="height: 300px; background-image: linear-gradient(45deg, rgb(211, 211, 211) 25%, transparent 25%, transparent 50%, rgb(211, 211, 211) 50%, rgb(211, 211, 211) 75%, transparent 75%, transparent 100%); background-size: 56.57px 56.57px;">
    </div>
    <div style="height: 300px; background-image: linear-gradient(45deg, rgb(211, 211, 211) 25%, transparent 25%, transparent 50%, rgb(211, 211, 211) 50%, rgb(211, 211, 211) 75%, transparent 75%, transparent 100%); background-size: 56.57px 56.57px;">
    </div>
  </div>
</div>
`;

exports[`COMPONENTS/FormRow With1Element smoke-test 1`] = `
<div style="max-width: 600px;">
  <div class="form-row">
    <div class="input-text">
      <div data-testid="input-text-label"
           class="input-text__label"
      >
        <label for="firstName"
               class="label label--s label--neutral"
        >
          Firt name
        </label>
      </div>
      <div class="input-text__wrap">
        <input type="text"
               maxlength="12"
               name="firstName"
               id="firstName"
               placeholder
               class="input input--primary input--neutral"
               value
        >
      </div>
    </div>
  </div>
</div>
`;

exports[`COMPONENTS/FormRow With2Elements smoke-test 1`] = `
<div style="max-width: 600px;">
  <div class="form-row">
    <div class="input-text">
      <div data-testid="input-text-label"
           class="input-text__label"
      >
        <label for="firstName"
               class="label label--s label--neutral"
        >
          Firt name
        </label>
      </div>
      <div class="input-text__wrap">
        <input type="text"
               maxlength="12"
               name="firstName"
               id="firstName"
               placeholder
               class="input input--primary input--neutral"
               value
        >
      </div>
    </div>
    <div class="input-text">
      <div data-testid="input-text-label"
           class="input-text__label"
      >
        <label for="lastName"
               class="label label--s label--neutral"
        >
          Last name
        </label>
      </div>
      <div class="input-text__wrap">
        <input type="text"
               maxlength="12"
               name="lastName"
               id="lastName"
               placeholder
               class="input input--primary input--neutral"
               value
        >
      </div>
    </div>
  </div>
</div>
`;
